Update: Language file for r22 to r27

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -12,17 +12,57 @@ STR_PARAM_DESC_SPEED	:Use this parameter to turn off speed limits.
 # Rail descriptions
 
 # Unelectrified Rail
-STR_NAME_RAIL	:Rail
-STR_TOOL_RAIL	:Rail
-STR_MENU_RAIL	:Rail
-STR_BUIL_RAIL	:Rail
-STR_REPL_RAIL	:Rail
-STR_NENG_RAIL	:Rail
+STR_NAME_RAIL	:Unelectrified Rail
+STR_TOOL_RAIL	:Unelectrified Rail
+STR_MENU_RAIL	:Unelectrified Rail
+STR_BUIL_RAIL	:Unelectrified Rail
+STR_REPL_RAIL	:Unelectrified Rail
+STR_NENG_RAIL	:Unelectrified Rail
 
-# HSL
-STR_NAME_HSL	:HSL
-STR_TOOL_HSL	:HSL
-STR_MENU_HSL	:HSL
-STR_BUIL_HSL	:HSL
-STR_REPL_HSL	:HSL
-STR_NENG_HSL	:High Speed
+# YARD Rail
+STR_NAME_YARD	:Yard/Station [Universal]
+STR_TOOL_YARD	:Yard/Station [Universal]
+STR_MENU_YARD	:Yard/Station [Universal]
+STR_BUIL_YARD	:Yard/Station [Universal]
+STR_REPL_YARD	:Yard/Station [Universal]
+STR_NENG_YARD	:Yard/Station [Universal]
+
+# Electrified [1500V DC]
+STR_NAME_STANDARDRAIL	:Standard Rail [1500V DC]
+STR_TOOL_STANDARDRAIL	:Standard Rail [1500V DC]
+STR_MENU_STANDARDRAIL	:Standard Rail [1500V DC]
+STR_BUIL_STANDARDRAIL	:Standard Rail [1500V DC]
+STR_REPL_STANDARDRAIL	:Standard Rail [1500V DC]
+STR_NENG_STANDARDRAIL	:Standard Rail [1500V DC]
+
+# Betuweroute [25kV AC]
+STR_NAME_BETUWE	:Betuweroute [25kV AC]
+STR_TOOL_BETUWE	:Betuweroute [25kV AC]
+STR_MENU_BETUWE	:Betuweroute [25kV AC]
+STR_BUIL_BETUWE	:Betuweroute [25kV AC]
+STR_REPL_BETUWE	:Betuweroute [25kV AC]
+STR_NENG_BETUWE	:Betuweroute [25kV AC]
+
+# Metro
+STR_NAME_METRO	:Metro
+STR_TOOL_METRO	:Metro
+STR_MENU_METRO	:Metro
+STR_BUIL_METRO	:Metro
+STR_REPL_METRO	:Metro
+STR_NENG_METRO	:Metro
+
+# HSL [25kV AC]
+STR_NAME_HSL	:HSL [25kV AC]
+STR_TOOL_HSL	:HSL [25kV AC]
+STR_MENU_HSL	:HSL [25kV AC]
+STR_BUIL_HSL	:HSL [25kV AC]
+STR_REPL_HSL	:HSL [25kV AC]
+STR_NENG_HSL	:HSL [25kV AC]
+
+# Futuristic [Universal]
+STR_NAME_FUTURISTIC	:Futuristic [Universal]
+STR_TOOL_FUTURISTIC	:Futuristic [Universal]
+STR_MENU_FUTURISTIC	:Futuristic [Universal]
+STR_BUIL_FUTURISTIC	:Futuristic [Universal]
+STR_REPL_FUTURISTIC	:Futuristic [Universal]
+STR_NENG_FUTURISTIC	:Futuristic [Universal]
