--- a/lang/english.lng
+++ b/lang/english.lng
@@ -9,6 +9,13 @@ STR_GRF_DESCRIPTION		:Dutch Tracks for OpenTTD {}(c)Dutch Trackset Team {}Licens
 STR_PARAM_NAME_SPEED	:Speed limits
 STR_PARAM_DESC_SPEED	:Use this parameter to turn off speed limits.
 
+# Track compatibility
+STR_PARAM_NAME_TRACK_COMPAT		:Track compatibility
+STR_PARAM_DESC_TRACK_COMPAT		:Use this parameter to switch between different track compatibility lists
+STR_PARAM_TRACK_COMPAT_DEF		:Non electrified, DC, AC, Metro (Default)
+STR_PARAM_TRACK_COMPAT_POW		:Non electrified, electrified, Metro (No distinction AC/DC)
+STR_PARAM_TRACK_COMPAT_FULL		:Non electrified, electrified (No distinction AC/DC/Metro)
+
 # Rail descriptions
 
 # Unelectrified Rail
