--- a/lang/english.lng
+++ b/lang/english.lng
@@ -24,6 +24,9 @@ STR_PARAM_DESC_LEVCROSS_HIGH	:Use this parameter to enable/disable level crossin
 STR_PARAM_NAME_LEVCROSS_METRO	:Level crossings for Metro
 STR_PARAM_DESC_LEVCROSS_METRO	:Use this parameter to enable/disable level crossings for Metro tracks
 
+# Early Track Introduction
+STR_PARAM_NAME_EARLY_INTRO		:Early introduction
+STR_PARAM_DESC_EARLY_INTRO		:Turning this parameter on will make all tracks available in 1800. When off, tracks get introduced when a train is available for that tracktype or in 2050, whichever comes first.
 
 
 # Rail descriptions
