--- a/lang/english.lng
+++ b/lang/english.lng
@@ -11,7 +11,7 @@ STR_PARAM_DESC_SPEED	:Use this parameter to turn off speed limits.
 
 # Track compatibility
 STR_PARAM_NAME_TRACK_COMPAT		:Track compatibility
-STR_PARAM_DESC_TRACK_COMPAT		:Use this parameter to switch between different track compatibility lists
+STR_PARAM_DESC_TRACK_COMPAT		:Use this parameter to switch between different track compatibility lists. Use this when you have no compatible train set loaded!
 STR_PARAM_TRACK_COMPAT_DEF		:Non electrified, DC, AC, Metro (Default)
 STR_PARAM_TRACK_COMPAT_POW		:Non electrified, electrified, Metro (No distinction AC/DC)
 STR_PARAM_TRACK_COMPAT_FULL		:Non electrified, electrified (No distinction AC/DC/Metro)
@@ -26,8 +26,7 @@ STR_PARAM_DESC_LEVCROSS_METRO	:Use this parameter to enable/disable level crossi
 
 # Early Track Introduction
 STR_PARAM_NAME_EARLY_INTRO		:Early introduction
-STR_PARAM_DESC_EARLY_INTRO		:Turning this parameter on will make all tracks available in 1800. When off, tracks get introduced when a train is available for that tracktype or in 2050, whichever comes first. Make sure to have a train set that provides trains for all types or set the track compatibility parameter correct!
-
+STR_PARAM_DESC_EARLY_INTRO		:Turning this parameter on will make all tracks available in 1800. When off, tracks get introduced when a train is available for that tracktype or in 2050, whichever comes first
 
 # Rail descriptions
 
