Doc: Warning to load set before train sets in OpenTTD <r24272 (closes #4013)

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -3,6 +3,7 @@
 #Main grf title and description
 STR_GRF_NAME			:{TITLE}
 STR_GRF_DESCRIPTION		:Dutch Tracks for OpenTTD {}(c)Dutch Trackset Team {}License: GPLv2 or higher. {}See readme for details.
+STR_GRF_LOAD_ORDER		:Load this NewGRF before any trainset for a correct working (OpenTTD < r24272)
 
 # Parameter descriptions
 # Rail speed
