Feature: Slightly changed strings for Replacement and New Engine

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -36,32 +36,32 @@ STR_NAME_RAIL	:Unelectrified Rail
 STR_TOOL_RAIL	:Unelectrified Rail
 STR_MENU_RAIL	:Unelectrified Rail
 STR_BUIL_RAIL	:Unelectrified Rail
-STR_REPL_RAIL	:Unelectrified Rail
-STR_NENG_RAIL	:Unelectrified Rail
+STR_REPL_RAIL	:Unelectrified
+STR_NENG_RAIL	:Unelectrified Engine
 
 # YARD Rail
 STR_NAME_YARD	:Yard/Station [Universal]
 STR_TOOL_YARD	:Yard/Station [Universal]
 STR_MENU_YARD	:Yard/Station [Universal]
 STR_BUIL_YARD	:Yard/Station [Universal]
-STR_REPL_YARD	:Yard/Station [Universal]
-STR_NENG_YARD	:Yard/Station [Universal]
+STR_REPL_YARD	:Electrical (Yard/Station)
+STR_NENG_YARD	:Electrical (Yard/Station) Engine
 
 # Electrified [1500V DC]
 STR_NAME_STANDARDRAIL	:Standard Rail [1500V DC]
 STR_TOOL_STANDARDRAIL	:Standard Rail [1500V DC]
 STR_MENU_STANDARDRAIL	:Standard Rail [1500V DC]
 STR_BUIL_STANDARDRAIL	:Standard Rail [1500V DC]
-STR_REPL_STANDARDRAIL	:Standard Rail [1500V DC]
-STR_NENG_STANDARDRAIL	:Standard Rail [1500V DC]
+STR_REPL_STANDARDRAIL	:1500V DC (Standard Rail)
+STR_NENG_STANDARDRAIL	:1500V DC Engine
 
 # Betuweroute [25kV AC]
 STR_NAME_BETUWE	:Betuweroute [25kV AC]
 STR_TOOL_BETUWE	:Betuweroute [25kV AC]
 STR_MENU_BETUWE	:Betuweroute [25kV AC]
 STR_BUIL_BETUWE	:Betuweroute [25kV AC]
-STR_REPL_BETUWE	:Betuweroute [25kV AC]
-STR_NENG_BETUWE	:Betuweroute [25kV AC]
+STR_REPL_BETUWE	:25kV AC (Betuweroute)
+STR_NENG_BETUWE	:25kV AC (Betuweroute) Engine
 
 # Metro
 STR_NAME_METRO	:Metro
@@ -69,20 +69,20 @@ STR_TOOL_METRO	:Metro
 STR_MENU_METRO	:Metro
 STR_BUIL_METRO	:Metro
 STR_REPL_METRO	:Metro
-STR_NENG_METRO	:Metro
+STR_NENG_METRO	:Metro Engine
 
 # HSL [25kV AC]
 STR_NAME_HSL	:HSL [25kV AC]
 STR_TOOL_HSL	:HSL [25kV AC]
 STR_MENU_HSL	:HSL [25kV AC]
 STR_BUIL_HSL	:HSL [25kV AC]
-STR_REPL_HSL	:HSL [25kV AC]
-STR_NENG_HSL	:HSL [25kV AC]
+STR_REPL_HSL	:25kV AC (HSL)
+STR_NENG_HSL	:25kV AC (HSL) Engine
 
 # Futuristic [Universal]
 STR_NAME_FUTURISTIC	:Futuristic [Universal]
 STR_TOOL_FUTURISTIC	:Futuristic [Universal]
 STR_MENU_FUTURISTIC	:Futuristic [Universal]
 STR_BUIL_FUTURISTIC	:Futuristic [Universal]
-STR_REPL_FUTURISTIC	:Futuristic [Universal]
-STR_NENG_FUTURISTIC	:Futuristic [Universal]
+STR_REPL_FUTURISTIC	:Electrical (Futuristic)
+STR_NENG_FUTURISTIC	:Electrical (Futuristic) Engine
