Update: Translations ca_ES: 28 changes by juanjo

--- a/lang/catalan.lng
+++ b/lang/catalan.lng
@@ -3,15 +3,23 @@
 ##gender Masculin Femenin
 
 #Main grf title and description
+STR_GRF_NAME                    :{TITLE}
 
 # Parameter descriptions
 # Rail speed
 
 # Track compatibility
+STR_PARAM_NAME_TRACK_COMPAT             :Compatibilitat de vies
+STR_PARAM_TRACK_COMPAT_DEF              :No electrificat, DC, AC i Metro (Per defecte)
+STR_PARAM_TRACK_COMPAT_POW              :No electrificat, electrificat, Metro (Sense distinció AC/DC)
+STR_PARAM_TRACK_COMPAT_FULL             :No electrificat, electrificat (Sense distinció AC/DC/Metro)
 
 # Level Crossing Highspeed
+STR_PARAM_DESC_LEVCROSS_HIGH    :Usa aquest paràmetre per a activar/desactivar els passos de nivell per a les vies HSL/Betuwe/Futurística
 
 # Level Crossing Metro
+STR_PARAM_NAME_LEVCROSS_METRO   :Passos a nivell per a via de metro
+STR_PARAM_DESC_LEVCROSS_METRO   :Usa aquest paràmetre per a activar/desactivar els passos a nivell per a les vies de Metro
 
 # Fences
 
@@ -19,15 +27,35 @@
 # Rail descriptions
 
 # Unelectrified Rail
+STR_NAME_RAIL   :Rail No Electrificat
+STR_MENU_RAIL   :Rail No Electrificat
+STR_BUIL_RAIL   :Rail no electrificat
+STR_NENG_RAIL   :Vehicle de rail no electrificat
 
 # YARD Rail
+STR_NENG_YARD   :Vehicle Elèctric (Multisistema)
 
 # Electrified [1500V DC]
+STR_TOOL_STANDARDRAIL   :Rail Estàndard [1500V DC]
+STR_BUIL_STANDARDRAIL   :Rail Estàndard [1500V DC]
+STR_NENG_STANDARDRAIL   :Vehicle de 1500V DC
 
 # Betuweroute [25kV AC]
+STR_BUIL_BETUWE :Betuweroute [25kV AC]
 
 # Metro
+STR_BUIL_METRO  :Metro
+STR_REPL_METRO  :Metro
+STR_NENG_METRO  :Vehicles de Metro
 
 # HSL [25kV AC]
+STR_NAME_HSL    :HSL [25kV AC]
+STR_TOOL_HSL    :HSL [25kV AC]
+STR_BUIL_HSL    :HSL [25kV AC]
+STR_REPL_HSL    :25kV AC (HSL)
 
 # Futuristic [Universal]
+STR_NAME_FUTURISTIC     :Futurístic [Universal]
+STR_BUIL_FUTURISTIC     :Futurístic [Universal]
+STR_REPL_FUTURISTIC     :Elèctric (Futurístic)
+STR_NENG_FUTURISTIC     :Vehicle Elèctric (Futurístic)
