Update: Translations es_ES: 1 change by SilverSurferZzZ

--- a/lang/spanish.lng
+++ b/lang/spanish.lng
@@ -30,6 +30,7 @@ STR_BUIL_STANDARDRAIL   :Vía estandar [1500V CC]
 
 # Betuweroute [25kV AC]
 STR_TOOL_BETUWE :Betuweroute [25kV CA]
+STR_MENU_BETUWE :Betuweroute [25kV CA]
 
 # Metro
 STR_TOOL_METRO  :Metro
