--- a/lang/spanish.lng
+++ b/lang/spanish.lng
@@ -7,6 +7,7 @@ STR_GRF_NAME                    :{TITLE}
 
 # Parameter descriptions
 # Rail speed
+STR_PARAM_NAME_SPEED    :Límites de velocidad
 
 # Track compatibility
 STR_PARAM_TRACK_COMPAT_DEF              :No electrificado, CC, CA, Metro (Por defecto)
@@ -34,6 +35,7 @@ STR_MENU_BETUWE :Betuweroute [25kV CA]
 
 # Metro
 STR_TOOL_METRO  :Metro
+STR_MENU_METRO  :Metro
 STR_BUIL_METRO  :Metro
 STR_REPL_METRO  :Metro
 
