Update: Translations es_ES: 1 change by SilverSurferZzZ

--- a/lang/spanish.lng
+++ b/lang/spanish.lng
@@ -49,6 +49,7 @@ STR_TOOL_METRO  :Metro
 STR_MENU_METRO  :Metro
 STR_BUIL_METRO  :Metro
 STR_REPL_METRO  :Metro
+STR_NENG_METRO  :Motor Metro
 
 # HSL [25kV AC]
 STR_NAME_HSL    :HSL [25kV CA]
