Update: Translations es_ES: 1 change by SilverSurferZzZ

--- a/lang/spanish.lng
+++ b/lang/spanish.lng
@@ -63,3 +63,4 @@ STR_NENG_HSL    :Motor (HSL) 25kV CA
 STR_NAME_FUTURISTIC     :Futurista [Universal]
 STR_MENU_FUTURISTIC     :Futurista [Universal]
 STR_BUIL_FUTURISTIC     :Futurista [Universal]
+STR_NENG_FUTURISTIC     :Motor eléctrico (Futurista)
