--- a/lang/spanish.lng
+++ b/lang/spanish.lng
@@ -31,6 +31,9 @@ STR_MENU_RAIL   :Ferrocarril sin electrificar
 STR_BUIL_RAIL   :Ferrocarril sin electrificar
 
 # YARD Rail
+STR_NAME_YARD   :Patio/Estación [Universal]
+STR_MENU_YARD   :Patio/Estación [Universal]
+STR_BUIL_YARD   :Patio/Estación [Universal]
 
 # Electrified [1500V DC]
 STR_BUIL_STANDARDRAIL   :Vía estandar [1500V CC]
