--- a/lang/italian.lng
+++ b/lang/italian.lng
@@ -5,35 +5,35 @@
 
 #Main grf title and description
 STR_GRF_NAME                    :{TITLE}
-STR_GRF_DESCRIPTION             :Binari Olandesi per OpenTTD{}(c)Team dei Binari Olandesi{}Licenza: GPLv2 o piú alta.{}Vedere readme per dettagli.
-STR_GRF_LOAD_ORDER              :Caricate questo NewGRF prima di tutti i pachetti di treni per un funzionamento corretto (OpenTTD < r24272)
+STR_GRF_DESCRIPTION             :Binari olandesi per OpenTTD{}(c)Team dei Binari olandesi{}Licenza: GPLv2 o superiore.{}Leggere il file "readme" per ulteriori dettagli.
+STR_GRF_LOAD_ORDER              :Per un funzionamento corretto, questo NewGRF va caricato prima di qualsiasi set di treni (OpenTTD < r24272)
 
 # Parameter descriptions
 # Rail speed
-STR_PARAM_NAME_SPEED    :Limiti di velocitá
-STR_PARAM_DESC_SPEED    :Usate questo parametro per disattivare i limiti di velocitá.
+STR_PARAM_NAME_SPEED    :Limiti di velocità
+STR_PARAM_DESC_SPEED    :Questo parametro disattiva i limiti di velocità.
 
 # Track compatibility
 STR_PARAM_NAME_TRACK_COMPAT             :Compatibilità dei binari
-STR_PARAM_DESC_TRACK_COMPAT             :Usate questo parametro per scambiare tra le liste dei binari differenti. Usate questo quando non avete caricato nessun pachetto di treni compatibile! Questo non influenza la potenza delle locomotive se esso dipende dal tipo dei binari, siccome esso sia controllato dai pachetti di treni.
-STR_PARAM_TRACK_COMPAT_DEF              :Non elettrificata, DC, AC, Metro (difetto)
-STR_PARAM_TRACK_COMPAT_POW              :Non elettrificata, elettrificata, Metro (senza distinzione AC/DC)
-STR_PARAM_TRACK_COMPAT_FULL             :Non elettrificata, elettrificata (senza distinzione AC/DC/Metro)
+STR_PARAM_DESC_TRACK_COMPAT             :Questo parametro modifica le liste di compatibilità fra i diversi tipi di binari. Da usare in assenza di un set di treni compatibile. Non ha effetti sulla potenza delle locomotive, poiché quest'ultima è controllata dal set di treni usato.
+STR_PARAM_TRACK_COMPAT_DEF              :Senza elettrificazione, corrente continua, corrente alternata, ferrovia suburbana (default)
+STR_PARAM_TRACK_COMPAT_POW              :Senza elettrificazione, con elettrificazione, ferrovia suburbana (senza distinzione per tipo di corrente)
+STR_PARAM_TRACK_COMPAT_FULL             :Senza elettrificazione, con elettrificazione (senza distinzione per tipo di corrente o principale/suburbana)
 
 # Level Crossing Highspeed
-STR_PARAM_NAME_LEVCROSS_HIGH    :Passaggi a livello per HSL/Betuwe/Futuristici
-STR_PARAM_DESC_LEVCROSS_HIGH    :Usate questo parametro per attivare/disattivare i passaggi a livello per binari HSL/Betuwe/Futuristici
+STR_PARAM_NAME_LEVCROSS_HIGH    :Passaggi a livello per linee ad alta velocità/Betuwe/Futuristici
+STR_PARAM_DESC_LEVCROSS_HIGH    :Questo parametro imposta i passaggi a livello per i binari ad alta velocità/Betuwe/Futuristici
 
 # Level Crossing Metro
-STR_PARAM_NAME_LEVCROSS_METRO   :Passaggi a livello per Metro
-STR_PARAM_DESC_LEVCROSS_METRO   :Usate questo parametro per attivare/disattivare i passaggi a livello per binari Metro
+STR_PARAM_NAME_LEVCROSS_METRO   :Passaggi a livello per ferrovie suburbane
+STR_PARAM_DESC_LEVCROSS_METRO   :Questo parametro per imposta i passaggi a livello per le ferrovie suburbani
 
 # Fences
-STR_PARAM_NAME_FENCES                   :Recinti
-STR_PARAM_DESC_FENCES                   :Usate questo parametro per impostare i recinti usati (Recinti dei binari Olandesi, Recinti OTTD o senza recinti)
-STR_PARAM_FENCES_DUTCH                  :Recinti dei binari Olandesi (se disponibile)
-STR_PARAM_FENCES_OTTD                   :Recinti OTTD
-STR_PARAM_FENCES_NONE                   :Senza recinti
+STR_PARAM_NAME_FENCES                   :Recinzioni
+STR_PARAM_DESC_FENCES                   :Questo parametro sceglie le recinzioni da usare (recinzioni dei binari olandesi, recinzioni standard di OTTD, o senza recinzioni)
+STR_PARAM_FENCES_DUTCH                  :Recinzioni dei binari olandesi (se disponibili)
+STR_PARAM_FENCES_OTTD                   :Recinzioni di OTTD
+STR_PARAM_FENCES_NONE                   :Binari senza recinzioni
 
 
 # Rail descriptions
@@ -43,48 +43,48 @@ STR_NAME_RAIL   :Binari non elettrificati
 STR_TOOL_RAIL   :Binari non elettrificati
 STR_MENU_RAIL   :Binari non elettrificati
 STR_BUIL_RAIL   :Binari non elettrificati
-STR_REPL_RAIL   :Non elettrificati
-STR_NENG_RAIL   :Locomotiva non elettrificata
+STR_REPL_RAIL   :Senza elettrificazione
+STR_NENG_RAIL   :Locomotiva senza motore elettrico
 
 # YARD Rail
-STR_NAME_YARD   :Cantiere/Stazione [Universale]
-STR_TOOL_YARD   :Cantiere/Stazione [Universale]
-STR_MENU_YARD   :Cantiere/Stazione [Universale]
-STR_BUIL_YARD   :Cantiere/Stazione [Universale]
-STR_REPL_YARD   :Elettrico (Cantiere/Stazione)
-STR_NENG_YARD   :Locomotiva elettrica (multisistema)
+STR_NAME_YARD   :Parco merci/Stazione [Universale]
+STR_TOOL_YARD   :Parco merci/Stazione [Universale]
+STR_MENU_YARD   :Parco merci/Stazione [Universale]
+STR_BUIL_YARD   :Parco merci/Stazione [Universale]
+STR_REPL_YARD   :Con elettrificazione (Parco merci/Stazione)
+STR_NENG_YARD   :Locomotiva elettrica (multifase)
 
 # Electrified [1500V DC]
-STR_NAME_STANDARDRAIL   :Binari normali [1500V DC]
-STR_TOOL_STANDARDRAIL   :Binari normali [1500V DC]
-STR_MENU_STANDARDRAIL   :Binari normali [1500V DC]
-STR_BUIL_STANDARDRAIL   :Binari normali [1500V DC]
-STR_REPL_STANDARDRAIL   :1500V DC (Binari normali)
-STR_NENG_STANDARDRAIL   :Locomotiva 1500V DC
+STR_NAME_STANDARDRAIL   :Binari standard [corrente continua a 1500V]
+STR_TOOL_STANDARDRAIL   :Binari standard [corrente continua a 1500V]
+STR_MENU_STANDARDRAIL   :Binari standard [corrente continua a 1500V]
+STR_BUIL_STANDARDRAIL   :Binari standard [corrente continua a 1500V]
+STR_REPL_STANDARDRAIL   :Corrente continua a 1500V (Binari standard)
+STR_NENG_STANDARDRAIL   :Locomotiva a corrente continua 1500V
 
 # Betuweroute [25kV AC]
-STR_NAME_BETUWE :Betuweroute [25kV AC]
-STR_TOOL_BETUWE :Betuweroute [25kV AC]
-STR_MENU_BETUWE :Betuweroute [25kV AC]
-STR_BUIL_BETUWE :Betuweroute [25kV AC]
-STR_REPL_BETUWE :25kV AC (Betuweroute)
-STR_NENG_BETUWE :Locomotiva 25kV AC (Betuweroute)
+STR_NAME_BETUWE :Betuweroute [corrente alternata a 25kV]
+STR_TOOL_BETUWE :Betuweroute [corrente alternata a 25kV]
+STR_MENU_BETUWE :Betuweroute [corrente alternata a 25kV]
+STR_BUIL_BETUWE :Betuweroute [corrente alternata a 25kV]
+STR_REPL_BETUWE :Corrente alternata a 25kV (Betuweroute)
+STR_NENG_BETUWE :Locomotiva a corrente alternata 25kV (Betuweroute)
 
 # Metro
-STR_NAME_METRO  :Metro
-STR_TOOL_METRO  :Metro
-STR_MENU_METRO  :Metro
-STR_BUIL_METRO  :Metro
-STR_REPL_METRO  :Metro
+STR_NAME_METRO  :Ferrovia suburbana
+STR_TOOL_METRO  :Ferrovia suburbana
+STR_MENU_METRO  :Ferrovia suburbana
+STR_BUIL_METRO  :Ferrovia suburbana
+STR_REPL_METRO  :Ferrovia suburbana
 STR_NENG_METRO  :Locomotiva del Metro
 
 # HSL [25kV AC]
-STR_NAME_HSL    :HSL [25kV AC]
-STR_TOOL_HSL    :HSL [25kV AC]
-STR_MENU_HSL    :HSL [25kV AC]
-STR_BUIL_HSL    :HSL [25kV AC]
-STR_REPL_HSL    :25kV AC (HSL)
-STR_NENG_HSL    :Locomotiva 25kV AC (HSL)
+STR_NAME_HSL    :Linea ad alta velocità [corrente alternata a 25kV]
+STR_TOOL_HSL    :Linea ad alta velocità [corrente alternata a 25kV]
+STR_MENU_HSL    :Linea ad alta velocità [corrente alternata a 25kV]
+STR_BUIL_HSL    :HSL [corrente alternata a 25kV]
+STR_REPL_HSL    :Corrente alternata a 25kV (HSL)
+STR_NENG_HSL    :Locomotiva a corrente alternata 25kV (Alta velocità)
 
 # Futuristic [Universal]
 STR_NAME_FUTURISTIC     :Futuristica [Universale]
